fix: table use overflow auto when config height property
when use overflow on table-body element,
if we use dropdown, it will be position error.

--- a/themes/components/table.less
+++ b/themes/components/table.less
@@ -41,7 +41,7 @@
   }
 
   &-body{
-    overflow: auto;
+    // overflow: auto;
   }
   &-container{
     position: relative;
